# aegis

./: .gitignore  Dockerfile  Dockerfile.aegispy  README.md  annotation_objects.py  chlamydomonas_motifs.py  equivalence_summary.py  mcscan_cannabis_vitis.py  orthofinder_cannabis_vitis.py  overlaps_pairwise_cannabis_vitis.py  pyproject.toml  rbh_cannabis_grapevine.py  reciprocal_liftoffs_liftons_cannabis_vitis.py  requirements.txt  test.py  test2.py  test_docker.py
aegis/: __init__.py  annotation.py  equivalence.py  feature.py  gene.py  genefunctions.py  genome.py  subfeatures.py  transcript.py
aegis/cli/: extract.py  motifs.py  orthology.py  overlap.py  prune.py  reformat.py  rename.py  subset.py  summary.py  tidy.py  tidy_genome.py
modules/: annotation.py  feature.py  gene.py  genome.py  misc_features.py  subfeatures.py  transcript.py
